<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormularioActivity">

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_begin="40dp" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_end="40dp" />

  <TextView
      android:id="@+id/textView5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/titulocuestionario"
      app:layout_constraintEnd_toStartOf="@+id/guideline4"
      app:layout_constraintStart_toStartOf="@+id/guideline3"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/valpregunta1"
      app:layout_constraintStart_toStartOf="@+id/guideline3"
      app:layout_constraintTop_toBottomOf="@+id/textView5" />

  <LinearLayout
      android:id="@+id/linearLayout2"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:orientation="vertical"
      app:layout_constraintEnd_toStartOf="@+id/guideline4"
      app:layout_constraintStart_toStartOf="@+id/guideline3"
      app:layout_constraintTop_toBottomOf="@+id/textView6">

    <CheckBox
        android:id="@+id/cbautoconocimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valautoconocimiento" />

    <CheckBox
        android:id="@+id/cbempatia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valempatia" />

    <CheckBox
        android:id="@+id/cbcomunicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valcomunicacion" />

    <CheckBox
        android:id="@+id/cbtoma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valtoma" />

    <CheckBox
        android:id="@+id/cbpensamiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valpensamiento" />

    <CheckBox
        android:id="@+id/cbninguno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valninguno" />
  </LinearLayout>

  <TextView
      android:id="@+id/textView7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/valpregunta2"
      app:layout_constraintStart_toStartOf="@+id/guideline3"
      app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

  <RadioGroup
      android:id="@+id/rgpregunta2"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintEnd_toStartOf="@+id/guideline4"
      app:layout_constraintStart_toStartOf="@+id/guideline3"
      app:layout_constraintTop_toBottomOf="@+id/textView7">

    <RadioButton
        android:id="@+id/rbmucho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/valmucho" />

    <RadioButton
        android:id="@+id/rbmasomenos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/valmasomenos" />

    <RadioButton
        android:id="@+id/rbpoco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/valpoco" />
  </RadioGroup>

  <TextView
      android:id="@+id/textView8"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/valpregunta3"
      app:layout_constraintStart_toStartOf="@+id/guideline3"
      app:layout_constraintTop_toBottomOf="@+id/rgpregunta2" />

  <RadioGroup
      android:id="@+id/rgpregunta3"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintEnd_toStartOf="@+id/guideline4"
      app:layout_constraintStart_toStartOf="@+id/guideline3"
      app:layout_constraintTop_toBottomOf="@+id/textView8">

    <RadioButton
        android:id="@+id/rbbien"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/valbien" />

    <RadioButton
        android:id="@+id/rbregular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/valregular" />

    <RadioButton
        android:id="@+id/rbmal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/valmal" />
  </RadioGroup>

  <TextView
      android:id="@+id/textView9"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/valpregunta4"
      app:layout_constraintStart_toStartOf="@+id/guideline3"
      app:layout_constraintTop_toBottomOf="@+id/rgpregunta3" />

  <RadioGroup
      android:id="@+id/rgpregunta4"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintEnd_toStartOf="@+id/guideline4"
      app:layout_constraintStart_toStartOf="@+id/guideline3"
      app:layout_constraintTop_toBottomOf="@+id/textView9">

    <RadioButton
        android:id="@+id/rbsi1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/valsi" />

    <RadioButton
        android:id="@+id/rbno1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/valno" />
  </RadioGroup>

  <TextView
      android:id="@+id/textView10"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/valpregunta5"
      app:layout_constraintStart_toStartOf="@+id/guideline3"
      app:layout_constraintTop_toBottomOf="@+id/rgpregunta4" />

  <RadioGroup
      android:id="@+id/rgpregunta5"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintEnd_toStartOf="@+id/guideline4"
      app:layout_constraintStart_toStartOf="@+id/guideline3"
      app:layout_constraintTop_toBottomOf="@+id/textView10">

    <RadioButton
        android:id="@+id/rbsi2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/valsi" />

    <RadioButton
        android:id="@+id/rbno2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/valno" />
  </RadioGroup>

  <Button
      android:id="@+id/btnresolver"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/valresolver"
      app:layout_constraintEnd_toStartOf="@+id/guideline4"
      app:layout_constraintStart_toStartOf="@+id/guideline3"
      app:layout_constraintTop_toBottomOf="@+id/rgpregunta5" />
</androidx.constraintlayout.widget.ConstraintLayout>